fixed buttons, removed line from links, removed gaps, moved text in textbox

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     padding:50px;
     width: 300px;
     font-family: sans-serif;
-    margin: 50px; 
+    margin: 30px; 
     border-radius: 10px;
 }
 body{
@@ -17,52 +17,62 @@ form {
     text-align: center;
 }
 .title{
-
+    margin-top: 0px;
 }
 .subtitle{
     font-weight:bolder;
-    margin-bottom: 60px;
-    
+    text-decoration: none;
 }
-
+a { 
+    text-decoration: none; 
+  } 
 .social-login {
-
+    display: flex;
+    gap: 5px;
+    margin-bottom: 5px;
+    height: 50px;
 }
-.google-btn, .fb-btn {
-    width: 100%;
+.google-btn {
     padding: 10px;
     font-size: 14px;
     border: none;
     border-radius: 6px;
     background-color: #f0f0f0;
-    margin-bottom:10px;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    flex: 3;
 }
-.btn-text {
-
+.fb-btn {
+    padding: 0.2px;
+    border-radius: 6px;
+    justify-content: center;
+    border: none;
+    cursor: pointer;
+    align-items: center;
+    display: flex;
 }
-.google-btn img, .fb-btn img {
+.google-btn img {
     height: 20px;
     margin-right: 10px;
 }
-
+.fb-btn img {
+    height: 30px;
+    margin: 10px;
+}
 .or{
     display: flex;
     align-items: center;
     column-gap: 10px;
+    font-weight: bolder;
 }
 .or::before, .or::after{
     content:"";
     flex: 1px;
     height: 1px;
     background-color: gray;
-
-
-}
-     
+}   
 .email-login {
     display: flex;
     color: rgb(189, 177, 177);
@@ -70,13 +80,18 @@ form {
     gap: 10px;
     margin-bottom: 20px;
     text-align: left;
-    
 }
 .enter-password {
     color: rgb(228, 214, 214);
     flex-direction: column;
     gap: 10px;
     margin-bottom: 20px;
+}
+input {
+    height: 40px;
+    border-radius: 6px;
+    border-color: rgb(204, 196, 196);
+    padding-left: 20px;
 }
 .cta-btn {
     width: 100%;
